--- a/build.gradle
+++ b/build.gradle
@@ -39,8 +39,8 @@ dependencies {
     implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
     runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.5'
     runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.5'
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-webflux', version: '3.2.4'
 }
-
 
 tasks.named('test') {
     useJUnitPlatform()
